<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmoss_util</name>
    <version>0.9.0</version>
    <description>
      RoboMaster common util package,include debug, image utils and so on.
    </description>
    <maintainer email="zhenpeng.ge@qq.com">zhenpeng ge</maintainer>
    <license>Apache License 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>ament_index_cpp</depend>
    <depend>rcpputils</depend>
    <depend>libopencv-dev</depend>
    <depend>rmoss_interfaces</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>